--- a/API/.env.dev
+++ b/API/.env.dev
@@ -1,11 +1,11 @@
 AMBIENTE_PROCESSO=desenvolvimento
 
 # Configurações de conexão com o banco de dados remoto
-DB_HOST=localhost
+DB_HOST=127.0.0.1
 DB_DATABASE='potterverse'
 DB_USER='aluno'
-DB_PASSWORD='sptech'
-DB_PORT=3306
+DB_PASSWORD='aluno'
+DB_PORT=3306    
 
 # Configurações do servidor de aplicação
 APP_PORT=3333
