--- a/API/.env.dev
+++ b/API/.env.dev
@@ -3,8 +3,8 @@ AMBIENTE_PROCESSO=desenvolvimento
 # Configurações de conexão com o banco de dados remoto
 DB_HOST=127.0.0.1
 DB_DATABASE='potterverse'
-DB_USER='aluno'
-DB_PASSWORD='sptech'
+DB_USER='root'
+DB_PASSWORD='e21s20@1'
 DB_PORT=3306    
 
 # Configurações do servidor de aplicação
